# r_core

./: CMakeLists.txt  reality_design.odg
cmake/: r_coreConfig.cmake.in
include/r_core/: core.h  executor.h
src/: core.cpp  executor.cpp
test/: r_core_test.cpp
